feat: support process definition deletions (#1140)